<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameActivity"
    android:id="@+id/rootLayout">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/background3"
        android:gravity="center">

        <TextView
            android:id="@+id/highScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/high_score"
            android:textAlignment="center"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="@string/_23"
            android:textAlignment="center"
            android:textSize="50sp" />

        <Button
            android:id="@+id/new_game"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/orange"
            android:text="@string/new_game"
            android:textSize="20sp" />

        <Button
            android:id="@+id/instructions"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/orange"
            android:text="@string/instructions"
            android:textSize="20sp" />

        <Button
            android:id="@+id/exit"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/red"
            android:text="@string/quit"
            android:textSize="20sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>